@@ -3,7 +3,10 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- indent: ignore ws only lines
+- control drag doesn't kill existing selection
+- drag and drop: start drag and cancel, caret can be left in a strange
+  place
+- drag and drop: do a compound edit if same buffer
 - fix double slash in path bug
 - thread safety problem in VFSManager.waitForRequests()
 - print qq{ $key="$attributes->{$key}"}; in perl
@@ -15,10 +18,8 @@ and quirks that I need to fix eventually.
 - new file: horiz scroll wrong
 - while loading --> scroll bar
 - fsb default size
-- narrow: scrolls one down
 - split view line insert: repainted twice, selection problems
 - vfs browser: open in new view: doesn't focus the new view
-- macro record: doesn't respect overwrite
 - C+ENTER 3 C+2
 - class loading problems
 - optional dependencies
